--- a/IOTA/iota.ini
+++ b/IOTA/iota.ini
@@ -2,7 +2,7 @@
 PORT = 14265
 UDP_RECEIVER_PORT = 14600
 TCP_RECEIVER_PORT = 14600
-NEIGHBORS = udp://10.0.0.62:14600 udp://10.0.0.63:14600
+NEIGHBORS = udp://10.0.0.61:14600 udp://10.0.0.62:14600 udp://10.0.0.63:14600 udp://10.0.0.70:14600 udp://10.0.0.71:14600 udp://10.0.0.72:14600 udp://10.0.0.73:14600 udp://10.0.0.74:14600 udp://10.0.0.75:14600 udp://10.0.0.250:14600
 #IXI_DIR = ixi
 #DEBUG = false
 #DB_PATH = db
